# connect-reports-runner

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: build.yml  deploy.yml
executor/: exception_handler.py  exceptions.py  executor.py  runner.py  utils.py
tests/: .coverage  conftest.py  coverage.xml  test_exceptions.py  test_executor.py  test_runner.py  test_utils.py
tests/fixtures/: report_response_v1.json  report_response_v2.json
tests/fixtures/reports/report_spec_v1/: Readme.md  reports.json
tests/fixtures/reports/report_spec_v1/basic_report/: Readme.md  entrypoint_v1.py
tests/fixtures/reports/report_spec_v2/: Readme.md  reports.json
tests/fixtures/reports/report_spec_v2/super_report/: Readme.md  entrypoint_v2.py  entrypoint_v2_async.py  entrypoint_v2_async_gen.py
tests/htmlcov/: _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect___init___py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_exception_handler_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports___init___py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports___init___py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_billing_requests___init___py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_billing_requests_entrypoint_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_contract_list___init___py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_contract_list_entrypoint_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_customers_list___init___py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_customers_list_entrypoint_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_fulfillment_requests___init___py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_fulfillment_requests_entrypoint_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_fulfillment_requests_failed___init___py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_fulfillment_requests_failed_entrypoint_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_listing_list___init___py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_listing_list_entrypoint_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_listing_requests___init___py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_listing_requests_entrypoint_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_subscription_list___init___py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_subscription_list_entrypoint_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_tier_configuration_list___init___py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_tier_configuration_list_entrypoint_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_tier_configuration_requests___init___py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_tier_configuration_requests_entrypoint_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_reports_utils_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_tests___init___py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_tests_conftest_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_tests_test_billing_requests_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_tests_test_contracts_list_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_tests_test_customer_list_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_tests_test_fulfillment_requests_failed_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_tests_test_fulfillment_requests_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_tests_test_listing_list_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_tests_test_listing_requests_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_tests_test_subscription_list_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_tests_test_tier_configuration_list_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reports_tests_test_tier_configuration_requests_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_reportsdk_py.html  _Users_marc1_Documents_Connect_connect-reports-cloud-sdk_connect_utils_py.html  index.html  (+1 more)
